overlays/develop/deploymentconfig.patch.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: welcome-nodejs-github
spec:
  selector:
    app: welcome-nodejs-github-dev
    env: dev
  template:
    metadata:
      labels:
        app: welcome-nodejs-github-dev
        env: dev
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: environment-variables-welcome-nodejs-github-develop
        image: image-registry.openshift-image-registry.svc:5000/jhomar-welcome-github/welcome-nodejs-github:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 2
        name: welcome-nodejs-github-dev
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 2
