overlays/develop/service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-nodejs-github
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: welcome-nodejs-github-dev
  type: ClusterIP
